[gd_scene load_steps=10 format=2]

[ext_resource path="res://GOL_texture/Grid.gd" type="Script" id=1]
[ext_resource path="res://GOL_texture/GameOfLife.gd" type="Script" id=2]
[ext_resource path="res://GOL_texture/Renderer2.gd" type="Script" id=3]
[ext_resource path="res://GOL_texture/Renderer.gd" type="Script" id=4]
[ext_resource path="res://GOL_texture/GameOfLife.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/mouse_pressed = false
shader_param/mouse_position = Vector2( 0, 0 )
shader_param/pen_type = 1
shader_param/pen_size = 1
shader_param/pen_randomness = 0.5
shader_param/random = false
shader_param/rand_fill_treshold = 0.1
shader_param/paused = false
shader_param/clear = false
shader_param/rule0s = 12
shader_param/rule0b = 8
shader_param/rule1s = 60
shader_param/rule1b = 8
shader_param/color0a = Plane( 1, 0, 0, 1 )
shader_param/color1a = Plane( 0, 1, 0, 1 )
shader_param/color0d = Plane( 0, 0, 0, 1 )
shader_param/color1d = Plane( 0, 0, 0, 1 )
shader_param/color2 = Plane( 0.99, 0, 0.5, 1 )
shader_param/isp = 0.5

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/mouse_pressed = false
shader_param/mouse_position = Vector2( 0, 0 )
shader_param/pen_type = 1
shader_param/pen_size = 1
shader_param/pen_randomness = 0.5
shader_param/random = false
shader_param/rand_fill_treshold = 0.1
shader_param/paused = false
shader_param/clear = false
shader_param/rule0s = 12
shader_param/rule0b = 8
shader_param/rule1s = 60
shader_param/rule1b = 8
shader_param/color0a = Plane( 1, 0, 0, 1 )
shader_param/color1a = Plane( 0, 1, 0, 1 )
shader_param/color0d = Plane( 0, 0, 0, 1 )
shader_param/color1d = Plane( 0, 0, 0, 1 )
shader_param/color2 = Plane( 0.99, 0, 0.5, 1 )
shader_param/isp = 0.5

[sub_resource type="ViewportTexture" id=4]
flags = 32
viewport_path = NodePath("Viewport2")

[sub_resource type="Environment" id=5]
background_mode = 4
background_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_levels/7 = true
glow_intensity = 0.18
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_brightness = 0.62

[node name="GameOfLife" type="Control"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
mouse_filter = 2
script = ExtResource( 2 )
pen_size = 15
pen_randomness = 0.4
rules = [ {
0: [ false, false, true, true, false, false, false, false, false ],
1: [ false, false, false, true, false, false, false, false, false ]
}, {
0: [ false, false, true, true, true, false, false, false, false ],
1: [ false, false, false, true, false, false, false, false, false ]
} ]
colors = [ {
false: Color( 0.160784, 0.160784, 0.368627, 1 ),
true: Color( 0.133333, 0.576471, 0.815686, 1 )
}, {
false: Color( 0.160784, 0.301961, 0.160784, 1 ),
true: Color( 0.133333, 0.882353, 0.133333, 1 )
}, Color( 1, 0, 0, 1 ) ]
infectivity = 0.45

[node name="Viewport" type="Viewport" parent="."]
transparent_bg = true
usage = 0
render_target_update_mode = 1

[node name="Renderer" type="Sprite" parent="Viewport"]
light_mask = 0
material = SubResource( 1 )
scale = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="Viewport2" type="Viewport" parent="."]
transparent_bg = true
usage = 0
render_target_update_mode = 1

[node name="Renderer" type="Sprite" parent="Viewport2"]
light_mask = 0
material = SubResource( 3 )
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
mouse_filter = 2
texture = SubResource( 4 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[connection signal="draw" from="TextureRect" to="." method="_on_TextureRect_draw"]
